--- a/dream.html
+++ b/dream.html
@@ -7,6 +7,8 @@
     <title>dream_project</title>
 </head>
 <body>
-    
+    <h1>Hey Man,Whats's Up</h1>
+    <h2>What are Doing?</h2>
+    <h3>Where are you?</h3>
 </body>
 </html>
