--- a/dream.html
+++ b/dream.html
@@ -12,5 +12,8 @@
     <h3>Where are you?</h3>
     <h4>Which problem?</h4>
     <h5>doing</h5>
+    <input type="text">
+    <br>
+    <button>click Dream</button>
 </body>
 </html>
